[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pogo.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.5, 12 )

[node name="Player" type="RigidBody2D" groups=["Player"]]
position = Vector2( -1, 0 )
mass = 10.0
physics_material_override = SubResource( 3 )
gravity_scale = 5.0
continuous_cd = 1
contacts_reported = 3
contact_monitor = true
linear_damp = 0.5
angular_damp = 12.0
script = ExtResource( 2 )
bounce_power = 1500
rotation_torque = 10000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 7 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.5, 8 )
scale = Vector2( 7.5, 5 )
texture = ExtResource( 1 )

[node name="FootArea" type="Area2D" parent="." groups=["Player", "PlayerFoot"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootArea"]
position = Vector2( 2, 48 )
shape = SubResource( 2 )

[node name="HeadArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea"]
position = Vector2( 2.5, -20 )
shape = SubResource( 4 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="FootArea" to="." method="_on_FootArea_body_entered"]
